# application_agent

./: .gitignore  API_SPEC.md  BACKEND_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  DESIGN.md  FRONTEND_IMPLEMENTATION_PLAN.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  README.md  SUPABASE_SETUP_GUIDE.md  job-app-ai-roadmap.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3cb537aa6328_initial_database_schema.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/core/: cache.py  database.py  exceptions.py  security.py
apps/api/app/models/: __init__.py  application.py  cv.py  job.py  profile.py  project.py  template.py  user.py
apps/api/app/schemas/: __init__.py  profile.py  project.py  user.py
apps/api/app/tasks/: ai_generation.py  celery_app.py  scraping.py
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/signup/: page.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/components/providers/: AuthProvider.tsx
apps/web/lib/auth/: auth-helpers.ts  supabase.ts
apps/web/lib/validations/: auth.ts
apps/web/stores/: authStore.ts
apps/web/types/: auth.ts
