[tool.poetry]
name = "job-app-api"
version = "0.1.0"
description = "AI Job Application Assistant - Backend API"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.0"
celery = "^5.3.0"
openai = "^1.3.0"
anthropic = "^0.7.0"
langchain = "^0.0.350"
# tiktoken = "^0.7.0"  # Requires Rust compiler, will add in Docker
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
sentry-sdk = "^1.38.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
